# templates

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
include/kangsw/: atomic_cloneable.hxx  atomic_queue.hxx  counter.hxx  custom_infix.hxx  enum_arithmetic.hxx  for_each.hxx  function_traits.hxx  hash_index.hxx  infix.hxx  infix_macros.hxx  misc.hxx  ndarray.hxx  ptr_proxy.hxx  safe_queue.hxx  spinlock.hxx  templates.hxx  thread_pool.hxx  thread_utility.hxx  thread_utils.hxx  trivial.hxx  zip.hxx
include/kangsw/algorithm/: hungarian.hxx
include/kangsw/container/: circular_queue.hxx  ndarray.hxx
include/kangsw/details/: tuple_for_each.hxx
include/kangsw/helpers/: counter.hxx  enum_arithmetic.hxx  for_each.hxx  function_traits.hxx  hash_index.hxx  infix.hxx  misc.hxx  optional.hxx  trivial.hxx  zip.hxx
include/kangsw/thread/: atomic_access.hxx  atomic_cloneable.hxx  atomic_queue.hxx  thread_pool.hxx  thread_utility.hxx
tests/automated/: test-algorithm.cpp  test-containers.cpp  test-custom-infix.cpp  test-main.cpp  test-misc.cpp  test-queue.cpp  test-thread_pool.cpp
